change collapse styles and bugs in simulation panel

--- a/src/scss/main/main.scss
+++ b/src/scss/main/main.scss
@@ -760,7 +760,7 @@ $controlbarHeight: 100px;
       }
 
       &__input {
-        margin-bottom: spacing(2);
+        // margin-bottom: spacing(2);
 
         & .input-group {
           margin: 0 !important;
